Fixed footer links and added text size and alignment options

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -134,35 +134,35 @@
 
 .loading::before {
 
-    content: "";
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    border: 4px solid grey;
-    border-radius: 50%;
-    border-top-color: transparent;
-    animation: spin 0.6s linear infinite;
-    left: calc(50% - 10px);
-    top: calc(50% - 10px);
+	content: "";
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	border: 4px solid grey;
+	border-radius: 50%;
+	border-top-color: transparent;
+	animation: spin 0.6s linear infinite;
+	left: calc(50% - 10px);
+	top: calc(50% - 10px);
 
 }
 
 @keyframes spin {
 
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 
 }
 
 .loading {
 
-    pointer-events: none;
+	pointer-events: none;
 
 }
 
 .width-400 {
 	width: 400px;
-    align-self: center;
+	align-self: center;
 }
 
 body {
@@ -350,13 +350,13 @@ h4 {
 .notification {
 
 	text-align: center;
-    background: #f2f2f7;
-    padding: 22px;
-    border-radius: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: black;
-    border: 3px solid;
+	background: #f2f2f7;
+	padding: 22px;
+	border-radius: 10px;
+	font-size: 16px;
+	font-weight: bold;
+	color: black;
+	border: 3px solid;
 
 }
 
@@ -430,9 +430,9 @@ h4 {
 			.title {
 				
 				text-align: center;
-    			font-size: 24px;
-    			font-weight: bold;
-    			max-width: calc(100% - 52px);
+				font-size: 24px;
+				font-weight: bold;
+				max-width: calc(100% - 52px);
 				min-width: 12ch;
 
 			}
@@ -460,6 +460,7 @@ h4 {
 
 				margin-top: 18px;
 				width: 100%;
+				z-index: 2;
 
 			}
 
@@ -496,6 +497,42 @@ h4 {
 					color: #1995ff;
 					text-decoration: underline;
 
+				}
+
+				.ql-align-center {
+				
+					text-align: center;
+				
+				}
+
+				.ql-align-justify {
+				
+					text-align: justify;
+				
+				}
+				
+				.ql-align-right {
+				
+					text-align: right;
+				
+				}
+
+				.ql-size-small {
+				
+					font-size: 0.75em;
+				
+				}
+
+				.ql-size-large {
+				
+					font-size: 1.5em;
+				
+				}
+
+				.ql-size-huge {
+					
+					font-size: 2.5em;
+				
 				}
 
 			}
@@ -636,14 +673,14 @@ h4 {
 			.question input[type="radio"] {
 
 				appearance: none;
-			    border: 2px solid #a5ce3a;
-			    border-radius: 50%;
-			    height: 20px;
-			    margin-top: 0px;
-			    margin-right: 5px;
-			    outline: none;
-			    vertical-align: middle;
-			    width: 20px;
+				border: 2px solid #a5ce3a;
+				border-radius: 50%;
+				height: 20px;
+				margin-top: 0px;
+				margin-right: 5px;
+				outline: none;
+				vertical-align: middle;
+				width: 20px;
 				
 			}
 
@@ -738,12 +775,12 @@ h4 {
 			li div {
 			
 				padding-left: 4px;
-                position: relative;
-                height: 40px;
-                background-color: transparent;
-                margin-bottom: 0px;
-                border-bottom: 4px solid white;
-                transition: background-color .125s;
+				position: relative;
+				height: 40px;
+				background-color: transparent;
+				margin-bottom: 0px;
+				border-bottom: 4px solid white;
+				transition: background-color .125s;
 			
 			}
 
@@ -844,44 +881,44 @@ h4 {
 	footer {
 
 		justify-content: space-around;
-        margin: 0px 22px 42px 22px;
-        padding-top: 38px;
-        font-size: 13px;
-        border-top: 1px solid #dcdcdc;
+		margin: 0px 22px 42px 22px;
+		padding-top: 38px;
+		font-size: 13px;
+		border-top: 1px solid #dcdcdc;
 
-        li {
+		li {
 
-        	margin: 18px 0;
+			margin: 18px 0;
 
-        }
+		}
 
-        a {
+		a {
 
-        	font-weight: bold;
-        	padding: 8px;
-        	background: transparent;
-        	transition: background-color 0.075s;
-        	border-radius: 4px;
+			font-weight: bold;
+			padding: 8px;
+			background: transparent;
+			transition: background-color 0.075s;
+			border-radius: 4px;
 
-        }
+		}
 
-        a:hover, a:focus {
+		a:hover, a:focus {
 
-        	background-color: black;
-        	color: white;
+			background-color: black;
+			color: white;
 
-        }
+		}
 
-        #apua-footer-component {
+		#apua-footer-component {
 
-        	div {
+			div {
 
-        		font-weight: bold;
-        		margin-bottom: 8px;
+				font-weight: bold;
+				margin-bottom: 8px;
 
-        	}
+			}
 
-        }
+		}
 
 
 	}
